--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="sms">SMS</string>
     <string name="telepon">Telepon</string>
     <string name="whatsapp">whatsapp</string>
+    <string name="logout">Logout</string>
 </resources>
